.openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: northwind-dotnet
  labels:
    app: northwind-dotnet
spec:
  selector:
    app: northwind-dotnet
  ports:
    - port: 8080
      targetPort: 8080
